--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,7 +23,8 @@ html {
 }
 
 body {
-  font-size: 15px;
+  font-size: 18px;
   background: #f2f2f2;
-  font-family: 'Spartan', sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
 }
+
