--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 253px;
+  max-height: 100%;
   background: #ffffff;
   border-radius: 6px;
+  margin-bottom: 5.6rem;
 
   span {
     font-weight: normal;
@@ -29,6 +30,29 @@
   }
 
   &__img {
-    margin-bottom: 2.4rem;
+    margin-top: -2rem;
+    padding: 0 3.2rem;
+    img {
+      width: 5rem;
+      max-width: 100%;
+      // max-height: 100%;
+    }
   }
+  &__text {
+    padding: 2.4rem 3.4rem;
+  }
+}
+
+.btn {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  color: #ffffff;
+  background: #5964e0;
+  border-radius: 5px;
+  padding: 1.6rem 3.1rem;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
