--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 350px;
-  max-height: 100%;
+  // max-height: 100%;
   background: #ffffff;
   border-radius: 6px;
   margin-bottom: 5.6rem;
