make changes in JS

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,8 +1,10 @@
 .container {
   max-width: 120rem;
   margin: 0 auto;
+  // align-items: center;
   display: flex;
   flex-wrap: wrap;
   gap: 3rem;
-  // align-items: center;
 }
+// .job-card-container {
+// }
